--- a/NavBar/App/Base.lproj/Main.storyboard
+++ b/NavBar/App/Base.lproj/Main.storyboard
@@ -16,18 +16,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6J9-ft-48O">
-                                <rect key="frame" x="184" y="433" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="nextController:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vip-JT-L84"/>
-                                </connections>
-                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pM0-vi-dJj">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lvV-6n-yeR">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1636"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6J9-ft-48O">
+                                                <rect key="frame" x="184" y="100" width="46" height="30"/>
+                                                <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <action selector="nextController:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vip-JT-L84"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="6J9-ft-48O" firstAttribute="centerX" secondItem="lvV-6n-yeR" secondAttribute="centerX" id="UEo-6P-rl9"/>
+                                            <constraint firstItem="6J9-ft-48O" firstAttribute="top" secondItem="lvV-6n-yeR" secondAttribute="top" constant="100" id="X6b-2k-hc1"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="lvV-6n-yeR" secondAttribute="trailing" id="SJg-3M-Nl9"/>
+                                    <constraint firstAttribute="bottom" secondItem="lvV-6n-yeR" secondAttribute="bottom" id="Shf-L6-oJc"/>
+                                    <constraint firstItem="lvV-6n-yeR" firstAttribute="leading" secondItem="pM0-vi-dJj" secondAttribute="leading" id="V1B-94-ZFg"/>
+                                    <constraint firstItem="lvV-6n-yeR" firstAttribute="top" secondItem="pM0-vi-dJj" secondAttribute="top" id="jQy-HD-qrO"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6J9-ft-48O" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="QWQ-Im-xTh"/>
-                            <constraint firstItem="6J9-ft-48O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mNY-NV-LrX"/>
+                            <constraint firstItem="lvV-6n-yeR" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="6dM-ua-ZcQ"/>
+                            <constraint firstItem="pM0-vi-dJj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FRL-H4-qeL"/>
+                            <constraint firstItem="pM0-vi-dJj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="MfI-yc-BOq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pM0-vi-dJj" secondAttribute="trailing" id="m2T-5O-bMV"/>
+                            <constraint firstItem="lvV-6n-yeR" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="2" id="m6Q-4T-wyJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pM0-vi-dJj" secondAttribute="bottom" id="yIh-O9-PB9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
