--- a/NavBar/App/Base.lproj/Main.storyboard
+++ b/NavBar/App/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,15 +11,15 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="NavBar" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pM0-vi-dJj">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lvV-6n-yeR">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1636"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1792"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6J9-ft-48O">
                                                 <rect key="frame" x="184" y="100" width="46" height="30"/>
@@ -47,14 +46,13 @@
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="lvV-6n-yeR" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="6dM-ua-ZcQ"/>
-                            <constraint firstItem="pM0-vi-dJj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FRL-H4-qeL"/>
-                            <constraint firstItem="pM0-vi-dJj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="MfI-yc-BOq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pM0-vi-dJj" secondAttribute="trailing" id="m2T-5O-bMV"/>
-                            <constraint firstItem="lvV-6n-yeR" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="2" id="m6Q-4T-wyJ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pM0-vi-dJj" secondAttribute="bottom" id="yIh-O9-PB9"/>
+                            <constraint firstItem="lvV-6n-yeR" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="6dM-ua-ZcQ"/>
+                            <constraint firstItem="pM0-vi-dJj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="FRL-H4-qeL"/>
+                            <constraint firstItem="pM0-vi-dJj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="MfI-yc-BOq"/>
+                            <constraint firstAttribute="trailing" secondItem="pM0-vi-dJj" secondAttribute="trailing" id="m2T-5O-bMV"/>
+                            <constraint firstItem="lvV-6n-yeR" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="2" id="m6Q-4T-wyJ"/>
+                            <constraint firstAttribute="bottom" secondItem="pM0-vi-dJj" secondAttribute="bottom" id="yIh-O9-PB9"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
